--- a/etecia/styles.css
+++ b/etecia/styles.css
@@ -18,12 +18,11 @@
 
 .header {
     position: fixed;
-    background-image: url("images/bkgdt2.png");
+    background-image: url("images/blackbk.jpg");
     background-size: 100%;
     width: 100%;
     height: 70px;
     top: 0;
-    float: right;
     padding: 15px 500px;
 }
 
@@ -44,7 +43,13 @@
     font: 400 28px "Oswald", sans-serif;
     text-transform: uppercase;
     text-decoration: none;
-    color:purple;    
+    color:purple; 
+    align-items: start;   
+}
+
+.outros-link:hover{
+  color: rgba(255, 255, 255, 0.8);
+  transition: 0.2s;
 }
 
 /* rodapé */
@@ -59,11 +64,10 @@
     bottom: 0;
    }
 
- 
-.mbl-link{
+ .mbl-link{
     align-items: center;
     justify-content: start;
-    padding: 0 100px;
+    padding: 0 20px;
 }
 
 .sp-link{
@@ -80,14 +84,17 @@
 .insta-link{
   float: right;
   align-items: center;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 40px;
+  margin-bottom: 5px;
 }
 
 .yt-link{
     float:right;
     align-items: end;
     margin-right: 10px;
-    margin-top: 10px;
+  margin-bottom: 5px;
   }
   
+  .etecia-link{
+    margin-left: 20px;
+    }
